--- a/CSS/kasper.css
+++ b/CSS/kasper.css
@@ -210,7 +210,7 @@ header nav ul {
   display: flex;
 }
 
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
   header nav ul {
     display: none;
   }
@@ -228,7 +228,7 @@ header nav ul {
   header nav ul li a {
     padding: 15px !important;
   }
-}
+} */
 
 header nav ul li a {
   display: block;
