--- a/CSS/kasper.css
+++ b/CSS/kasper.css
@@ -35,8 +35,8 @@
   width: 30px;
   height: 30px;
   background-color: var(--secondary-color);
-  bottom: 1vh;
-  right: 1vw;
+  bottom: 4vh;
+  right: 4vw;
   text-decoration: none;
   text-align: center;
   z-index: 100;
@@ -241,14 +241,13 @@ header nav ul li a {
   z-index: 1;
 }
 
-header nav ul li a:hover {
+/* header nav ul li a:hover {
   color: var(--main-color);
-  /* border-bottom: 1px solid var(--main-color); */
-}
+} 
 
 header nav ul li a:hover {
   transform: scale(1.3);
-}
+}*/
 
 header nav .form {
   width: 40px;
